# nok-repo

./: LICENSE  README.md  core.py  pyproject.toml
geo_progression/: main.py
nok/: main.py
